--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 
-  <header class="header">
+  <!-- <header class="header">
     <div class="header__container container">
 
       <a href="./index.html" class="logo link logo__part"><span class="logo__part--accent">Web</span>Studio</a>
@@ -61,21 +61,21 @@
         </li>
       </ul>
     </div>
-  </header>
+  </header> -->
 
   <main>
     <!-- HERO -->
-    <section class="hero section">
+    <!-- <section class="hero section">
       <div class="container">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
         <div class="hero__btn-container">
           <button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Section features -->
-    <section class="section">
+    <!-- <section class="section">
       <div class="container">
         <h2 class="visually-hidden">Особливості</h2>
         <ul class="features list">
@@ -122,10 +122,10 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- Section projects -->
-    <section class="section projects">
+    <!-- <section class="section projects">
       <div class="container">
         <h2 class="section__title">Чим ми займаємося</h2>
         <ul class="projects__list list">
@@ -143,15 +143,15 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- Section teams -->
-    <section class="section team-section">
+    <!-- <section class="section team-section">
       <div class="container">
         <h2 class="section__title">Наша команда</h2>
         <ul class="teams list">
           <li class="teams__card">
-            <img src="./images/worker-1.jpg" alt="Працівник 1" width="270" height="260">
+            <img class="teams__img" src="./images/worker-1.jpg" alt="Працівник 1" width="270" height="260">
             <div class="teams__caption">
               <h3 class="teams__name">Ігор Дем'яненко</h3>
               <p lang="en" class="teams__position">Product Designer</p>
@@ -192,7 +192,7 @@
             </div>
           </li>
           <li class="teams__card">
-            <img src="./images/worker-2.jpg" alt="Працівник 2" width="270" height="260">
+            <img class="teams__img" src="./images/worker-2.jpg" alt="Працівник 2" width="270" height="260">
             <div class="teams__caption">
               <h3 class="teams__name">Ольга Рєпіна</h3>
               <p lang="en" class="teams__position">Frontend Developer</p>
@@ -233,7 +233,7 @@
             </div>
           </li>
           <li class="teams__card">
-            <img src="./images/worker-3.jpg" alt="Працівник 3" width="270" height="260">
+            <img class="teams__img" src="./images/worker-3.jpg" alt="Працівник 3" width="270" height="260">
             <div class="teams__caption">
               <h3 class="teams__name">Микола Тарасов</h3>
               <p lang="en" class="teams__position">Marketing</p>
@@ -274,7 +274,7 @@
             </div>
           </li>
           <li class="teams__card">
-            <img src="./images/worker-4.jpg" alt="Працівник 4" width="270" height="260">
+            <img class="teams__img" src="./images/worker-4.jpg" alt="Працівник 4" width="270" height="260">
             <div class="teams__caption">
               <h3 class="teams__name">Михайло Єрмаков</h3>
               <p lang="en" class="teams__position">UI Designer</p>
@@ -316,10 +316,10 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- Section clients -->
-    <section class="section clients-section">
+    <!-- <section class="section clients-section">
       <div class="container">
         <h2 class="section__title">Постійні клієнти</h2>
         <ul class="clients list">
@@ -367,11 +367,11 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </main>
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container footer__container">
       <div class="footer__owner">
 
@@ -440,10 +440,10 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <!-- Modal window -->
-  <div class="backdrop is-hidden" data-modal>
+  <!-- <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" class="modal__btn" data-modal-close>
         <svg class="modal__btm--close" width="14" height="14">
@@ -494,7 +494,7 @@
         <button class="modal-form-btn" type="submit">Відправити</button>
       </form>
     </div>
-  </div>
+  </div> -->
 
   <script src="./js/modal.js"></script>
 
