--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 
 <body>
 
-  <header class="header">
+  <!-- <header class="header">
     <div class="header__container container">
 
       <a href="./index.html" class="logo link logo__part"><span class="logo__part--accent">Web</span>Studio</a>
@@ -61,7 +61,7 @@
         </li>
       </ul>
     </div>
-  </header>
+  </header> -->
 
   <main>
 
@@ -70,16 +70,16 @@
     <h1 class="visually-hidden">Портфоліо</h1>
     <section class="section">
       <div class="container portfolio">
-        <ul class="portfolio__filters list">
+        <!-- <ul class="portfolio__filters list">
           <li><button type="button" class="portfolio__btn portfolio__btn--active">Усі</button></li>
           <li><button type="button" class="portfolio__btn">Веб-сайти</button></li>
           <li><button type="button" class="portfolio__btn">Додатки</button></li>
           <li><button type="button" class="portfolio__btn">Дизайн</button></li>
           <li><button type="button" class="portfolio__btn">Маркетинг</button></li>
-        </ul>
+        </ul> -->
 
         <!-- works -->
-        <ul class="work list">
+        <!-- <ul class="work list">
           <li class="work__item">
             <div class="work__thumb">
               <img src="./images/portfolio/img-tehnocryack.jpg" alt="Ноутбук з фото людей" width="370" height="294">
@@ -239,12 +239,12 @@
               <p class="work__text">Додаток</p>
             </div>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </section>
   </main>
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container footer__container">
       <div class="footer__owner">
 
@@ -313,7 +313,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 </body>
 
 </html>
