--- a/index.html
+++ b/index.html
@@ -25,21 +25,28 @@
 
 <body>
 
-  <!-- <header class="header">
+  <header class="header">
     <div class="header__container container">
 
-      <a href="./index.html" class="logo link logo__part"><span class="logo__part--accent">Web</span>Studio</a>
+      <a class="logo link logo__part" href="./index.html"><span class="logo__part--accent">Web</span>Studio</a>
 
       <nav>
-        <ul class="nav list">
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <svg class="menu__icon" width="40" height="40" aria-label="Мобільне меню">
+            <use class="menu__icon--menu" href="./images/icons.svg#icon-menu-open"></use>
+          </svg>
+        </button>
+
+
+        <ul class="nav__list list">
           <li>
-            <a href="./index.html" class="nav__list nav__list--curent link">Студія</a>
+            <a class="nav__item nav__item--curent link" href="./index.html">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="nav__list link">Портфоліо</a>
+            <a class="nav__item link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="./" class="nav__list link">Контакти</a>
+            <a class="nav__item link" href="./">Контакти</a>
           </li>
         </ul>
       </nav>
@@ -50,18 +57,21 @@
             <svg class="contacts__icon" width="16" height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
-            info@devstudio.com</a>
+            info@devstudio.com
+          </a>
         </li>
         <li>
           <a href="tel:+380961111111" class="contacts__item--header link">
             <svg class="contacts__icon" width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
-            +38 096 111 11 11</a>
+            +38 096 111 11 11
+          </a>
         </li>
       </ul>
+
     </div>
-  </header> -->
+  </header>
 
   <main>
     <!-- HERO -->
@@ -496,7 +506,76 @@
     </div>
   </div> -->
 
+  <!-- Mobile menu -->
+  <div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu">
+      <svg class="menu__icon" width="40" height="40" aria-label="Мобільне меню">
+        <use class="menu__icon--cross" href="./images/icons.svg#icon-menu-close"></use>
+      </svg>
+    </button>
+
+    <ul class="mobile-menu-nav list">
+      <li>
+        <a href="./index.html" class="mobile-menu-nav__list mobile-menu-nav__list--curent link">Студія</a>
+      </li>
+      <li>
+        <a href="./portfolio.html" class="mobile-menu-nav__list link">Портфоліо</a>
+      </li>
+      <li>
+        <a href="./" class="mobile-menu-nav__list link">Контакти</a>
+      </li>
+    </ul>
+
+
+    <ul class="mobile-menu-contacts list">
+      <li>
+        <a href="mailto:info@devstudio.com" class="mobile-menu-contacts__item--header link">
+          info@devstudio.com
+        </a>
+      </li>
+      <li>
+        <a href="tel:+380961111111" class="mobile-menu-contacts__item--header mobile-menu-contacts__item--tel link">
+          +38 096 111 11 11
+        </a>
+      </li>
+    </ul>
+
+    <ul class="mobile-menu-socials list">
+      <li>
+        <a class="mobile-menu-socials__link link" href="https://www.instagram.com/" target="_blank"
+          rel="noopener noreferrer nofollow" aria-label="Instagram">
+          Instagram
+        </a>
+      </li>
+      <li>
+        <a class="mobile-menu-socials__link link" href="https://twitter.com/" target="_blank"
+          rel="noopener noreferrer nofollow" aria-label="Twitter">
+          Twitter
+        </a>
+      </li>
+      <li>
+        <a class="mobile-menu-socials__link link" href="https://uk-ua.facebook.com" target="_blank"
+          rel="noopener noreferrer nofollow" aria-label="Facebook">
+          Facebook
+        </a>
+      </li>
+      <li>
+        <a class="mobile-menu-socials__link link" href="https://ua.linkedin.com/" target="_blank"
+          rel="noopener noreferrer nofollow" aria-label="Linkedin">
+          Linkedin
+        </a>
+      </li>
+    </ul>
+
+  </div>
+
   <script src="./js/modal.js"></script>
+
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+
+  <script defer src="./js/mobile-menu.js"></script>
 
 </body>
 
