--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 
   <main>
     <!-- HERO -->
-    <!-- <section class="hero section">
+    <section class="hero section">
       <div class="container">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
         <div class="hero__btn-container">
           <button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Section features -->
     <!-- <section class="section">
@@ -156,7 +156,7 @@
     </section> -->
 
     <!-- Section teams -->
-    <!-- <section class="section team-section">
+    <section class="section team-section">
       <div class="container">
         <h2 class="section__title">Наша команда</h2>
         <ul class="teams list">
@@ -326,7 +326,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- Section clients -->
     <!-- <section class="section clients-section">
@@ -453,9 +453,9 @@
   </footer> -->
 
   <!-- Modal window -->
-  <!-- <div class="backdrop is-hidden" data-modal>
+  <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button type="button" class="modal__btn" data-modal-close>
+      <button class="modal__btn" type="button" data-modal-close>
         <svg class="modal__btm--close" width="14" height="14">
           <use href="./images/icons.svg#icon-btm-close-black"></use>
         </svg>
@@ -504,7 +504,7 @@
         <button class="modal-form-btn" type="submit">Відправити</button>
       </form>
     </div>
-  </div> -->
+  </div>
 
   <!-- Mobile menu -->
   <div class="menu-container js-menu-container" id="mobile-menu">
