--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 
-  <header class="header">
+  <!-- <header class="header">
     <div class="header__container container">
 
       <a class="logo link logo__part" href="./index.html"><span class="logo__part--accent">Web</span>Studio</a>
@@ -71,18 +71,18 @@
       </ul>
 
     </div>
-  </header>
+  </header> -->
 
   <main>
     <!-- HERO -->
-    <section class="hero section">
+    <!-- <section class="hero section">
       <div class="container">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
         <div class="hero__btn-container">
           <button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Section features -->
     <!-- <section class="section">
@@ -156,7 +156,7 @@
     </section> -->
 
     <!-- Section teams -->
-    <section class="section team-section">
+    <!-- <section class="section team-section">
       <div class="container">
         <h2 class="section__title">Наша команда</h2>
         <ul class="teams list">
@@ -326,7 +326,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- Section clients -->
     <!-- <section class="section clients-section">
@@ -381,61 +381,63 @@
 
   </main>
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container footer__container">
+      <h2 class="visually-hidden">Власник сайту</h2>
+
       <div class="footer__owner">
+        <div class="footer__info">
 
-        <h2 class="visually-hidden">Власник сайту</h2>
+          <a class="logo link logo__footer" href="./"><span class="logo__part--accent">Web</span>Studio</a>
 
-        <a href="./" class="logo link logo__footer"><span class="logo__part--accent">Web</span>Studio</a>
+          <address class="address">
+            <ul class="address__footer list">
+              <li><a class="address__text link" href="https://goo.gl/maps/XZNEGJrdnuefopXt8" target="_blank"
+                  rel="noopener noreferrer nofollow">
+                  м. Київ, пр-т Лесі Українки, 26</a></li>
+              <li><a class="link address__list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+              <li><a class="link address__list address__tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
 
-        <address class="address">
-          <ul class="list">
-            <li><a class="address__text link" href="https://goo.gl/maps/XZNEGJrdnuefopXt8" target="_blank"
-                rel="noopener noreferrer nofollow">
-                м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a class="link address__list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link address__list address__tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <div class="join">
+          <h3 class="join__title">приєднуйтесь</h3>
+          <ul class="socials list">
+            <li class="socials__item">
+              <a class="socials__link socials__link--color link" href="https://www.instagram.com/" target="_blank"
+                rel="noopener noreferrer nofollow" aria-label="Instagram icon">
+                <svg class="socials__icon socials__icon--color" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--color link" href="https://twitter.com/" target="_blank"
+                rel="noopener noreferrer nofollow" aria-label="Twitter icon">
+                <svg class="socials__icon socials__icon--color" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--color link" href="https://uk-ua.facebook.com" target="_blank"
+                rel="noopener noreferrer nofollow" aria-label="Facebook icon">
+                <svg class="socials__icon socials__icon--color" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--color link" href="https://ua.linkedin.com/" target="_blank"
+                rel="noopener noreferrer nofollow" aria-label="Linkedin icon">
+                <svg class="socials__icon socials__icon--color" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
-      </div>
-
-      <div class="join">
-        <h3 class="join__title">приєднуйтесь</h3>
-        <ul class="socials list">
-          <li class="socials__item">
-            <a class="socials__link socials__link--color link" href="https://www.instagram.com/" target="_blank"
-              rel="noopener noreferrer nofollow" aria-label="Instagram icon">
-              <svg class="socials__icon socials__icon--color" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--color link" href="https://twitter.com/" target="_blank"
-              rel="noopener noreferrer nofollow" aria-label="Twitter icon">
-              <svg class="socials__icon socials__icon--color" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--color link" href="https://uk-ua.facebook.com" target="_blank"
-              rel="noopener noreferrer nofollow" aria-label="Facebook icon">
-              <svg class="socials__icon socials__icon--color" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--color link" href="https://ua.linkedin.com/" target="_blank"
-              rel="noopener noreferrer nofollow" aria-label="Linkedin icon">
-              <svg class="socials__icon socials__icon--color" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        </div>
       </div>
 
       <div class="subscribe">
@@ -450,10 +452,10 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <!-- Modal window -->
-  <div class="backdrop is-hidden" data-modal>
+  <!-- <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button class="modal__btn" type="button" data-modal-close>
         <svg class="modal__btm--close" width="14" height="14">
@@ -504,10 +506,10 @@
         <button class="modal-form-btn" type="submit">Відправити</button>
       </form>
     </div>
-  </div>
+  </div> -->
 
   <!-- Mobile menu -->
-  <div class="menu-container js-menu-container" id="mobile-menu">
+  <!-- <div class="menu-container js-menu-container" id="mobile-menu">
     <button class="menu-toggle js-close-menu">
       <svg class="menu__icon" width="40" height="40" aria-label="Мобільне меню">
         <use class="menu__icon--cross" href="./images/icons.svg#icon-menu-close"></use>
@@ -567,7 +569,7 @@
       </li>
     </ul>
 
-  </div>
+  </div> -->
 
   <script src="./js/modal.js"></script>
 
