--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 
-  <!-- <header class="header">
+  <header class="header">
     <div class="header__container container">
 
       <a class="logo link logo__part" href="./index.html"><span class="logo__part--accent">Web</span>Studio</a>
@@ -71,21 +71,21 @@
       </ul>
 
     </div>
-  </header> -->
+  </header>
 
   <main>
     <!-- HERO -->
-    <!-- <section class="hero section">
+    <section class="hero section">
       <div class="container">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
         <div class="hero__btn-container">
           <button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Section features -->
-    <!-- <section class="section">
+    <section class="section">
       <div class="container">
         <h2 class="visually-hidden">Особливості</h2>
         <ul class="features list">
@@ -132,10 +132,10 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- Section projects -->
-    <!-- <section class="section projects">
+    <section class="section projects">
       <div class="container">
         <h2 class="section__title">Чим ми займаємося</h2>
         <ul class="projects__list list">
@@ -153,10 +153,10 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- Section teams -->
-    <!-- <section class="section team-section">
+    <section class="section team-section">
       <div class="container">
         <h2 class="section__title">Наша команда</h2>
         <ul class="teams list">
@@ -326,10 +326,10 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- Section clients -->
-    <!-- <section class="section clients-section">
+    <section class="section clients-section">
       <div class="container">
         <h2 class="section__title">Постійні клієнти</h2>
         <ul class="clients list">
@@ -377,7 +377,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
   </main>
 
@@ -455,7 +455,7 @@
   </footer>
 
   <!-- Modal window -->
-  <!-- <div class="backdrop is-hidden" data-modal>
+  <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button class="modal__btn" type="button" data-modal-close>
         <svg class="modal__btm--close" width="14" height="14">
@@ -506,10 +506,10 @@
         <button class="modal-form-btn" type="submit">Відправити</button>
       </form>
     </div>
-  </div> -->
+  </div>
 
   <!-- Mobile menu -->
-  <!-- <div class="menu-container js-menu-container" id="mobile-menu">
+  <div class="menu-container js-menu-container" id="mobile-menu">
     <button class="menu-toggle js-close-menu">
       <svg class="menu__icon" width="40" height="40" aria-label="Мобільне меню">
         <use class="menu__icon--cross" href="./images/icons.svg#icon-menu-close"></use>
@@ -569,14 +569,17 @@
       </li>
     </ul>
 
-  </div> -->
+  </div>
 
+  <!-- Кнопка "Замовити послугу" -->
   <script src="./js/modal.js"></script>
 
+  <!-- Прибираємо прокрутку екрана -->
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
     integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
     crossorigin="anonymous"></script>
 
+  <!-- Мобільне меню -->
   <script defer src="./js/mobile-menu.js"></script>
 
 </body>
