--- a/portfolio.html
+++ b/portfolio.html
@@ -25,21 +25,28 @@
 
 <body>
 
-  <!-- <header class="header">
+  <header class="header">
     <div class="header__container container">
 
-      <a href="./index.html" class="logo link logo__part"><span class="logo__part--accent">Web</span>Studio</a>
+      <a class="logo link logo__part" href="./index.html"><span class="logo__part--accent">Web</span>Studio</a>
 
       <nav>
-        <ul class="nav list">
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <svg class="menu__icon" width="40" height="40" aria-label="Мобільне меню">
+            <use class="menu__icon--menu" href="./images/icons.svg#icon-menu-open"></use>
+          </svg>
+        </button>
+
+
+        <ul class="nav__list list">
           <li>
-            <a href="./index.html" class="nav__list link">Студія</a>
+            <a class="nav__item link" href="./index.html">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="nav__list nav__list--curent link">Портфоліо</a>
+            <a class="nav__item nav__item--curent link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="./" class="nav__list link">Контакти</a>
+            <a class="nav__item link" href="./">Контакти</a>
           </li>
         </ul>
       </nav>
@@ -50,18 +57,21 @@
             <svg class="contacts__icon" width="16" height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
-            info@devstudio.com</a>
+            info@devstudio.com
+          </a>
         </li>
         <li>
           <a href="tel:+380961111111" class="contacts__item--header link">
             <svg class="contacts__icon" width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
-            +38 096 111 11 11</a>
+            +38 096 111 11 11
+          </a>
         </li>
       </ul>
+
     </div>
-  </header> -->
+  </header>
 
   <main>
 
@@ -70,13 +80,13 @@
     <h1 class="visually-hidden">Портфоліо</h1>
     <section class="section">
       <div class="container portfolio">
-        <!-- <ul class="portfolio__filters list">
+        <ul class="portfolio__filters list">
           <li><button type="button" class="portfolio__btn portfolio__btn--active">Усі</button></li>
           <li><button type="button" class="portfolio__btn">Веб-сайти</button></li>
           <li><button type="button" class="portfolio__btn">Додатки</button></li>
           <li><button type="button" class="portfolio__btn">Дизайн</button></li>
           <li><button type="button" class="portfolio__btn">Маркетинг</button></li>
-        </ul> -->
+        </ul>
 
         <!-- works -->
         <!-- <ul class="work list">
@@ -244,61 +254,63 @@
     </section>
   </main>
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container footer__container">
+      <h2 class="visually-hidden">Власник сайту</h2>
+
       <div class="footer__owner">
+        <div class="footer__info">
 
-        <h2 class="visually-hidden">Власник сайту</h2>
+          <a class="logo link logo__footer" href="./"><span class="logo__part--accent">Web</span>Studio</a>
 
-        <a href="./" class="logo link logo__footer"><span class="logo__part--accent">Web</span>Studio</a>
+          <address class="address">
+            <ul class="address__footer list">
+              <li><a class="address__text link" href="https://goo.gl/maps/XZNEGJrdnuefopXt8" target="_blank"
+                  rel="noopener noreferrer nofollow">
+                  м. Київ, пр-т Лесі Українки, 26</a></li>
+              <li><a class="link address__list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+              <li><a class="link address__list address__tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
 
-        <address class="address">
-          <ul class="list">
-            <li><a class="address__text link" href="https://goo.gl/maps/XZNEGJrdnuefopXt8" target="_blank"
-                rel="noopener noreferrer nofollow">
-                м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a class="link address__list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link address__list address__tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <div class="join">
+          <h3 class="join__title">приєднуйтесь</h3>
+          <ul class="socials list">
+            <li class="socials__item">
+              <a class="socials__link socials__link--color link" href="https://www.instagram.com/" target="_blank"
+                rel="noopener noreferrer nofollow" aria-label="Instagram icon">
+                <svg class="socials__icon socials__icon--color" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--color link" href="https://twitter.com/" target="_blank"
+                rel="noopener noreferrer nofollow" aria-label="Twitter icon">
+                <svg class="socials__icon socials__icon--color" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--color link" href="https://uk-ua.facebook.com" target="_blank"
+                rel="noopener noreferrer nofollow" aria-label="Facebook icon">
+                <svg class="socials__icon socials__icon--color" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="socials__link socials__link--color link" href="https://ua.linkedin.com/" target="_blank"
+                rel="noopener noreferrer nofollow" aria-label="Linkedin icon">
+                <svg class="socials__icon socials__icon--color" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
-      </div>
-
-      <div class="join">
-        <h3 class="join__title">приєднуйтесь</h3>
-        <ul class="socials list">
-          <li class="socials__item">
-            <a class="socials__link socials__link--color link" href="https://www.instagram.com/" target="_blank"
-              rel="noopener noreferrer nofollow" aria-label="Instagram icon">
-              <svg class="socials__icon socials__icon--color" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--color link" href="https://twitter.com/" target="_blank"
-              rel="noopener noreferrer nofollow" aria-label="Twitter icon">
-              <svg class="socials__icon socials__icon--color" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--color link" href="https://uk-ua.facebook.com" target="_blank"
-              rel="noopener noreferrer nofollow" aria-label="Facebook icon">
-              <svg class="socials__icon socials__icon--color" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__link socials__link--color link" href="https://ua.linkedin.com/" target="_blank"
-              rel="noopener noreferrer nofollow" aria-label="Linkedin icon">
-              <svg class="socials__icon socials__icon--color" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        </div>
       </div>
 
       <div class="subscribe">
@@ -313,7 +325,79 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
+
+  <!-- Mobile menu -->
+  <div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu">
+      <svg class="menu__icon" width="40" height="40" aria-label="Мобільне меню">
+        <use class="menu__icon--cross" href="./images/icons.svg#icon-menu-close"></use>
+      </svg>
+    </button>
+
+    <ul class="mobile-menu-nav list">
+      <li>
+        <a href="./index.html" class="mobile-menu-nav__list link">Студія</a>
+      </li>
+      <li>
+        <a href="./portfolio.html" class="mobile-menu-nav__list mobile-menu-nav__list--curent link">Портфоліо</a>
+      </li>
+      <li>
+        <a href="./" class="mobile-menu-nav__list link">Контакти</a>
+      </li>
+    </ul>
+
+
+    <ul class="mobile-menu-contacts list">
+      <li>
+        <a href="mailto:info@devstudio.com" class="mobile-menu-contacts__item--header link">
+          info@devstudio.com
+        </a>
+      </li>
+      <li>
+        <a href="tel:+380961111111" class="mobile-menu-contacts__item--header mobile-menu-contacts__item--tel link">
+          +38 096 111 11 11
+        </a>
+      </li>
+    </ul>
+
+    <ul class="mobile-menu-socials list">
+      <li>
+        <a class="mobile-menu-socials__link link" href="https://www.instagram.com/" target="_blank"
+          rel="noopener noreferrer nofollow" aria-label="Instagram">
+          Instagram
+        </a>
+      </li>
+      <li>
+        <a class="mobile-menu-socials__link link" href="https://twitter.com/" target="_blank"
+          rel="noopener noreferrer nofollow" aria-label="Twitter">
+          Twitter
+        </a>
+      </li>
+      <li>
+        <a class="mobile-menu-socials__link link" href="https://uk-ua.facebook.com" target="_blank"
+          rel="noopener noreferrer nofollow" aria-label="Facebook">
+          Facebook
+        </a>
+      </li>
+      <li>
+        <a class="mobile-menu-socials__link link" href="https://ua.linkedin.com/" target="_blank"
+          rel="noopener noreferrer nofollow" aria-label="Linkedin">
+          Linkedin
+        </a>
+      </li>
+    </ul>
+
+  </div>
+
+  <!-- Прибираємо прокрутку екрана -->
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+
+  <!-- Мобільне меню -->
+  <script defer src="./js/mobile-menu.js"></script>
+
 </body>
 
 </html>
