адаптація "portfolio works"

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,10 +89,11 @@
         </ul>
 
         <!-- works -->
-        <!-- <ul class="work list">
+        <ul class="work list">
           <li class="work__item">
             <div class="work__thumb">
-              <img src="./images/portfolio/img-tehnocryack.jpg" alt="Ноутбук з фото людей" width="370" height="294">
+              <img class="work__image" src="./images/portfolio/img-tehnocryack.jpg" alt="Ноутбук з фото людей"
+                width="370" height="294">
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -110,7 +111,8 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img src="./images/portfolio/img-poster-no-gs.jpg" alt="Баскетболісти з м'ячем" width="370" height="294">
+              <img class="work__image" src="./images/portfolio/img-poster-no-gs.jpg" alt="Баскетболісти з м'ячем"
+                width="370" height="294">
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -128,7 +130,8 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img src="./images/portfolio/img-restoran-seafood.jpg" alt="Риба" width="370" height="294">
+              <img class="work__image" src="./images/portfolio/img-restoran-seafood.jpg" alt="Риба" width="370"
+                height="294">
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -146,7 +149,8 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img src="./images/portfolio/img-project-prime.jpg" alt="Чорні навушники" width="370" height="294">
+              <img class="work__image" src="./images/portfolio/img-project-prime.jpg" alt="Чорні навушники" width="370"
+                height="294">
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -163,7 +167,8 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img src="./images/portfolio/img-project-boxes.jpg" alt="Дві паперові коробки" width="370" height="294">
+              <img class="work__image" src="./images/portfolio/img-project-boxes.jpg" alt="Дві паперові коробки"
+                width="370" height="294">
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -180,8 +185,8 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img src="./images/portfolio/img-inspiration-has-no-borders.jpg" alt="Монітор з картою світу" width="370"
-                height="294">
+              <img class="work__image" src="./images/portfolio/img-inspiration-has-no-borders.jpg"
+                alt="Монітор з картою світу" width="370" height="294">
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -198,8 +203,8 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img src="./images/portfolio/img-magazine-limited-edition.jpg" alt="Розгорнута книжка" width="370"
-                height="294">
+              <img class="work__image" src="./images/portfolio/img-magazine-limited-edition.jpg" alt="Розгорнута книжка"
+                width="370" height="294">
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -216,7 +221,8 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img src="./images/portfolio/img-project-lab.jpg" alt="Бирка на мотузочку" width="370" height="294">
+              <img class="work__image" src="./images/portfolio/img-project-lab.jpg" alt="Бирка на мотузочку" width="370"
+                height="294">
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -233,8 +239,8 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img src="./images/portfolio/img-growing-business.jpg" alt="Ноутбук з сторінкою сайту" width="370"
-                height="294">
+              <img class="work__image" src="./images/portfolio/img-growing-business.jpg" alt="Ноутбук з сторінкою сайту"
+                width="370" height="294">
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -249,7 +255,7 @@
               <p class="work__text">Додаток</p>
             </div>
           </li>
-        </ul> -->
+        </ul>
       </div>
     </section>
   </main>
