робота з img + ретіна

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,20 @@
         <ul class="work list">
           <li class="work__item">
             <div class="work__thumb">
-              <img class="work__image" src="./images/portfolio/img-tehnocryack.jpg" alt="Ноутбук з фото людей"
-                width="370" height="294">
+
+              <picture>
+                <!-- desctop screen -->
+                <source media="(min-width: 1200px)"
+                  srcset="./images/portfolio/img-1_desktop@1x.jpg 1x, ./images/portfolio/img-1_desktop@2x.jpg 2x" />
+                <!-- tablet screen -->
+                <source media="(min-width: 768px)"
+                  srcset="./images/portfolio/img-1_tablet@1x.jpg 1x, ./images/portfolio/img-1_tablet@2x.jpg 2x" />
+                <!-- mobile screen -->
+                <source media="(max-width: 767px)"
+                  srcset="./images/portfolio/img-1_mobile@1x.jpg 1x, ./images/portfolio/img-1_mobile@2x.jpg 2x" />
+                <img class="work__image" src="./images/portfolio/img-1_mobile@1x.jpg" alt="Ноутбук з фото людей"
+                  width="450" height="294" loading="lazy">
+              </picture>
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -111,8 +123,20 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img class="work__image" src="./images/portfolio/img-poster-no-gs.jpg" alt="Баскетболісти з м'ячем"
-                width="370" height="294">
+
+              <picture>
+                <!-- desctop screen -->
+                <source media="(min-width: 1200px)"
+                  srcset="./images/portfolio/img-2_desktop@1x.jpg 1x, ./images/portfolio/img-2_desktop@2x.jpg 2x" />
+                <!-- tablet screen -->
+                <source media="(min-width: 768px)"
+                  srcset="./images/portfolio/img-2_tablet@1x.jpg 1x, ./images/portfolio/img-2_tablet@2x.jpg 2x" />
+                <!-- mobile screen -->
+                <source media="(max-width: 767px)"
+                  srcset="./images/portfolio/img-2_mobile@1x.jpg 1x, ./images/portfolio/img-2_mobile@2x.jpg 2x" />
+                <img class="work__image" src="./images/portfolio/img-2_mobile@1x.jpg" alt="Баскетболісти з м'ячем"
+                  width="450" height="294" loading="lazy">
+              </picture>
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -130,8 +154,20 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img class="work__image" src="./images/portfolio/img-restoran-seafood.jpg" alt="Риба" width="370"
-                height="294">
+
+              <picture>
+                <!-- desctop screen -->
+                <source media="(min-width: 1200px)"
+                  srcset="./images/portfolio/img-3_desktop@1x.jpg 1x, ./images/portfolio/img-3_desktop@2x.jpg 2x" />
+                <!-- tablet screen -->
+                <source media="(min-width: 768px)"
+                  srcset="./images/portfolio/img-3_tablet@1x.jpg 1x, ./images/portfolio/img-3_tablet@2x.jpg 2x" />
+                <!-- mobile screen -->
+                <source media="(max-width: 767px)"
+                  srcset="./images/portfolio/img-3_mobile@1x.jpg 1x, ./images/portfolio/img-3_mobile@2x.jpg 2x" />
+                <img class="work__image" src="./images/portfolio/img-3_mobile@1x.jpg" alt="Риба" width="450"
+                  height="294" loading="lazy">
+              </picture>
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -149,8 +185,20 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img class="work__image" src="./images/portfolio/img-project-prime.jpg" alt="Чорні навушники" width="370"
-                height="294">
+
+              <picture>
+                <!-- desctop screen -->
+                <source media="(min-width: 1200px)"
+                  srcset="./images/portfolio/img-4_desktop@1x.jpg 1x, ./images/portfolio/img-4_desktop@2x.jpg 2x" />
+                <!-- tablet screen -->
+                <source media="(min-width: 768px)"
+                  srcset="./images/portfolio/img-4_tablet@1x.jpg 1x, ./images/portfolio/img-4_tablet@2x.jpg 2x" />
+                <!-- mobile screen -->
+                <source media="(max-width: 767px)"
+                  srcset="./images/portfolio/img-4_mobile@1x.jpg 1x, ./images/portfolio/img-4_mobile@2x.jpg 2x" />
+                <img class="work__image" src="./images/portfolio/img-4_mobile@1x.jpg" alt="Чорні навушники" width="450"
+                  height="294" loading="lazy">
+              </picture>
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -167,8 +215,20 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img class="work__image" src="./images/portfolio/img-project-boxes.jpg" alt="Дві паперові коробки"
-                width="370" height="294">
+
+              <picture>
+                <!-- desctop screen -->
+                <source media="(min-width: 1200px)"
+                  srcset="./images/portfolio/img-5_desktop@1x.jpg 1x, ./images/portfolio/img-5_desktop@2x.jpg 2x" />
+                <!-- tablet screen -->
+                <source media="(min-width: 768px)"
+                  srcset="./images/portfolio/img-5_tablet@1x.jpg 1x, ./images/portfolio/img-5_tablet@2x.jpg 2x" />
+                <!-- mobile screen -->
+                <source media="(max-width: 767px)"
+                  srcset="./images/portfolio/img-5_mobile@1x.jpg 1x, ./images/portfolio/img-5_mobile@2x.jpg 2x" />
+                <img class="work__image" src="./images/portfolio/img-5_mobile@1x.jpg" alt="Дві паперові коробки"
+                  width="450" height="294" loading="lazy">
+              </picture>
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -185,8 +245,20 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img class="work__image" src="./images/portfolio/img-inspiration-has-no-borders.jpg"
-                alt="Монітор з картою світу" width="370" height="294">
+
+              <picture>
+                <!-- desctop screen -->
+                <source media="(min-width: 1200px)"
+                  srcset="./images/portfolio/img-6_desktop@1x.jpg 1x, ./images/portfolio/img-6_desktop@2x.jpg 2x" />
+                <!-- tablet screen -->
+                <source media="(min-width: 768px)"
+                  srcset="./images/portfolio/img-6_tablet@1x.jpg 1x, ./images/portfolio/img-6_tablet@2x.jpg 2x" />
+                <!-- mobile screen -->
+                <source media="(max-width: 767px)"
+                  srcset="./images/portfolio/img-6_mobile@1x.jpg 1x, ./images/portfolio/img-6_mobile@2x.jpg 2x" />
+                <img class="work__image" src="./images/portfolio/img-6_mobile@1x.jpg" alt="Монітор з картою світу"
+                  width="450" height="294" loading="lazy">
+              </picture>
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -203,8 +275,20 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img class="work__image" src="./images/portfolio/img-magazine-limited-edition.jpg" alt="Розгорнута книжка"
-                width="370" height="294">
+
+              <picture>
+                <!-- desctop screen -->
+                <source media="(min-width: 1200px)"
+                  srcset="./images/portfolio/img-7_desktop@1x.jpg 1x, ./images/portfolio/img-7_desktop@2x.jpg 2x" />
+                <!-- tablet screen -->
+                <source media="(min-width: 768px)"
+                  srcset="./images/portfolio/img-7_tablet@1x.jpg 1x, ./images/portfolio/img-7_tablet@2x.jpg 2x" />
+                <!-- mobile screen -->
+                <source media="(max-width: 767px)"
+                  srcset="./images/portfolio/img-7_mobile@1x.jpg 1x, ./images/portfolio/img-7_mobile@2x.jpg 2x" />
+                <img class="work__image" src="./images/portfolio/img-7_mobile@1x.jpg" alt="Розгорнута книжка"
+                  width="450" height="294" loading="lazy">
+              </picture>
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -221,8 +305,20 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img class="work__image" src="./images/portfolio/img-project-lab.jpg" alt="Бирка на мотузочку" width="370"
-                height="294">
+
+              <picture>
+                <!-- desctop screen -->
+                <source media="(min-width: 1200px)"
+                  srcset="./images/portfolio/img-8_desktop@1x.jpg 1x, ./images/portfolio/img-8_desktop@2x.jpg 2x" />
+                <!-- tablet screen -->
+                <source media="(min-width: 768px)"
+                  srcset="./images/portfolio/img-8_tablet@1x.jpg 1x, ./images/portfolio/img-8_tablet@2x.jpg 2x" />
+                <!-- mobile screen -->
+                <source media="(max-width: 767px)"
+                  srcset="./images/portfolio/img-8_mobile@1x.jpg 1x, ./images/portfolio/img-8_mobile@2x.jpg 2x" />
+                <img class="work__image" src="./images/portfolio/img-8_mobile@1x.jpg" alt="Бирка на мотузочку"
+                  width="450" height="294" loading="lazy">
+              </picture>
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
@@ -239,8 +335,20 @@
           </li>
           <li class="work__item">
             <div class="work__thumb">
-              <img class="work__image" src="./images/portfolio/img-growing-business.jpg" alt="Ноутбук з сторінкою сайту"
-                width="370" height="294">
+
+              <picture>
+                <!-- desctop screen -->
+                <source media="(min-width: 1200px)"
+                  srcset="./images/portfolio/img-9_desktop@1x.jpg 1x, ./images/portfolio/img-9_desktop@2x.jpg 2x" />
+                <!-- tablet screen -->
+                <source media="(min-width: 768px)"
+                  srcset="./images/portfolio/img-9_tablet@1x.jpg 1x, ./images/portfolio/img-9_tablet@2x.jpg 2x" />
+                <!-- mobile screen -->
+                <source media="(max-width: 767px)"
+                  srcset="./images/portfolio/img-9_mobile@1x.jpg 1x, ./images/portfolio/img-9_mobile@2x.jpg 2x" />
+                <img class="work__image" src="./images/portfolio/img-9_mobile@1x.jpg" alt="Ноутбук з сторінкою сайту"
+                  width="450" height="294" loading="lazy">
+              </picture>
 
               <div class="work__overlay">
                 <p class="work__overlay-text">
