--- a/index.html
+++ b/index.html
@@ -140,15 +140,18 @@
         <h2 class="section__title">Чим ми займаємося</h2>
         <ul class="projects__list list">
           <li class="projects__item">
-            <img src="./images/box-1.jpg" alt="Робочий процес" width="370" height="294">
+            <img srcset=".\images\projects\img-1_desktop@1x.jpg 1x, .\images\projects\img-1_desktop@2x.jpg 2x"
+              alt="Робочий процес" width="370" height="294">
             <div class="projects__text">Десктопні додатки</div>
           </li>
           <li class="projects__item">
-            <img src="./images/box-2.jpg" alt="Робочий процес" width="370" height="294">
+            <img srcset=".\images\projects\img-2_desktop@1x.jpg 1x, .\images\projects\img-2_desktop@2x.jpg 2x"
+              alt="Робочий процес" width="370" height="294">
             <div class="projects__text">Мобільні додатки</div>
           </li>
           <li class="projects__item">
-            <img src="./images/box-3.jpg" alt="Робочий процес" width="370" height="294">
+            <img srcset=".\images\projects\img-3_desktop@1x.jpg 1x, .\images\projects\img-3_desktop@2x.jpg 2x"
+              alt="Робочий процес" width="370" height="294">
             <div class="projects__text">Дизайнерські рішення</div>
           </li>
         </ul>
@@ -161,7 +164,19 @@
         <h2 class="section__title">Наша команда</h2>
         <ul class="teams list">
           <li class="teams__card">
-            <img class="teams__img" src="./images/worker-1.jpg" alt="Працівник 1" width="270" height="260">
+            <picture>
+              <!-- desctop screen -->
+              <source media="(min-width: 1200px)"
+                srcset="./images/team/img-1_desktop@1x.jpg 1x, ./images/team/img-1_desktop@2x.jpg 2x" />
+              <!-- tablet screen -->
+              <source media="(min-width: 768px)"
+                srcset="./images/team/img-1_tablet@1x.jpg 1x, ./images/team/img-1_tablet@2x.jpg 2x" />
+              <!-- mobile screen -->
+              <source media="(max-width: 767px)"
+                srcset="./images/team/img-1_mobile@1x.jpg 1x, ./images/team/img-1_mobile@2x.jpg 2x" />
+              <img class="teams__img" src="./images/team/img-1_mobile@1x.jpg" alt="Ігор Дем'яненко" width="450"
+                height="460" loading="lazy">
+            </picture>
             <div class="teams__caption">
               <h3 class="teams__name">Ігор Дем'яненко</h3>
               <p lang="en" class="teams__position">Product Designer</p>
@@ -202,7 +217,19 @@
             </div>
           </li>
           <li class="teams__card">
-            <img class="teams__img" src="./images/worker-2.jpg" alt="Працівник 2" width="270" height="260">
+            <picture>
+              <!-- desctop screen -->
+              <source media="(min-width: 1200px)"
+                srcset="./images/team/img-2_desktop@1x.jpg 1x, ./images/team/img-2_desktop@2x.jpg 2x" />
+              <!-- tablet screen -->
+              <source media="(min-width: 768px)"
+                srcset="./images/team/img-2_tablet@1x.jpg 1x, ./images/team/img-2_tablet@2x.jpg 2x" />
+              <!-- mobile screen -->
+              <source media="(max-width: 767px)"
+                srcset="./images/team/img-2_mobile@1x.jpg 1x, ./images/team/img-2_mobile@2x.jpg 2x" />
+              <img class="teams__img" src="./images/team/img-2_mobile@1x.jpg" alt="Ольга Рєпіна" width="450"
+                height="460" loading="lazy">
+            </picture>
             <div class="teams__caption">
               <h3 class="teams__name">Ольга Рєпіна</h3>
               <p lang="en" class="teams__position">Frontend Developer</p>
@@ -243,7 +270,19 @@
             </div>
           </li>
           <li class="teams__card">
-            <img class="teams__img" src="./images/worker-3.jpg" alt="Працівник 3" width="270" height="260">
+            <picture>
+              <!-- desctop screen -->
+              <source media="(min-width: 1200px)"
+                srcset="./images/team/img-3_desktop@1x.jpg 1x, ./images/team/img-3_desktop@2x.jpg 2x" />
+              <!-- tablet screen -->
+              <source media="(min-width: 768px)"
+                srcset="./images/team/img-3_tablet@1x.jpg 1x, ./images/team/img-3_tablet@2x.jpg 2x" />
+              <!-- mobile screen -->
+              <source media="(max-width: 767px)"
+                srcset="./images/team/img-3_mobile@1x.jpg 1x, ./images/team/img-3_mobile@2x.jpg 2x" />
+              <img class="teams__img" src="./images/team/img-3_mobile@1x.jpg" alt="Микола Тарасов" width="450"
+                height="460" loading="lazy">
+            </picture>
             <div class="teams__caption">
               <h3 class="teams__name">Микола Тарасов</h3>
               <p lang="en" class="teams__position">Marketing</p>
@@ -284,7 +323,19 @@
             </div>
           </li>
           <li class="teams__card">
-            <img class="teams__img" src="./images/worker-4.jpg" alt="Працівник 4" width="270" height="260">
+            <picture>
+              <!-- desctop screen -->
+              <source media="(min-width: 1200px)"
+                srcset="./images/team/img-4_desktop@1x.jpg 1x, ./images/team/img-4_desktop@2x.jpg 2x" />
+              <!-- tablet screen -->
+              <source media="(min-width: 768px)"
+                srcset="./images/team/img-4_tablet@1x.jpg 1x, ./images/team/img-4_tablet@2x.jpg 2x" />
+              <!-- mobile screen -->
+              <source media="(max-width: 767px)"
+                srcset="./images/team/img-4_mobile@1x.jpg 1x, ./images/team/img-4_mobile@2x.jpg 2x" />
+              <img class="teams__img" src="./images/team/img-4_mobile@1x.jpg" alt="Михайло Єрмаков" width="450"
+                height="460" loading="lazy">
+            </picture>
             <div class="teams__caption">
               <h3 class="teams__name">Михайло Єрмаков</h3>
               <p lang="en" class="teams__position">UI Designer</p>
